@@ -1,5 +1,10 @@
 2011-01-29  Rik  <octave@nomad.inbox5.com>
 
+	* interpreter/system.txi: Add S_ISBLK and related functions to
+	documentation.
+
+2011-01-29  Rik  <octave@nomad.inbox5.com>
+
 	* interpreter/optim.txi: Add glpkmex function to documentation.
 
 2011-01-29  Rik  <octave@nomad.inbox5.com>
